# aloe-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rust-workspace-typemap.json
aloe-adsr/: Cargo.toml  README.md
aloe-adsr/src/: adsr_envelope.rs  adsr_parameters.rs  imports.rs  lib.rs
aloe-adsr/tests/: adsr_test.rs
aloe-alert-window/: Cargo.toml  README.md
aloe-alert-window/src/: alert_text_comp.rs  alert_window_colour.rs  alert_window_info.rs  alert_window_mappings.rs  alertwindow.rs  imports.rs  lib.rs  password.rs  show.rs
aloe-analytics/: Cargo.toml  README.md
aloe-analytics/src/: analytics.rs  buttontracker.rs  destination.rs  event.rs  event_dispatcher.rs  example_collection_demo.rs  google_destination.rs  imports.rs  lib.rs  threaded_analytics_destination.rs  threaded_analytics_destination_interface.rs
aloe-analytics/tests/: threaded_analytics_destination.rs
aloe-android/: Cargo.toml  README.md
aloe-android-audio/: Cargo.toml  README.md
aloe-android-audio/src/: audio_io_device.rs  audio_io_device_type.rs  audio_track.rs  buffer_helpers_f32.rs  buffer_helpers_i16.rs  buffers.rs  imports.rs  lib.rs  opensl_audio_device_type.rs  opensl_audio_io_device.rs  opensl_engine.rs  opensl_engine_holder.rs  opensl_intf_iid.rs  opensl_object_itf_free.rs  opensl_pcm.rs  opensl_pcm_data_format_ex.rs  opensl_queue_runner.rs  opensl_queue_runner_player.rs  opensl_queue_runner_recorder.rs  opensl_realtime_thread.rs  opensl_session.rs  opensl_session_t.rs  opensl_sl_object_ref.rs  opensl_sl_object_ref_control_block.rs  opensl_sl_ref.rs
aloe-android-camera/: Cargo.toml  README.md
aloe-android-camera/src/: android_camera_impl.rs  android_runnable.rs  bytecode.rs  capture_session.rs  capture_session_configured_callback.rs  capture_session_mode.rs  capture_session_preview_mode.rs  capture_session_video_recording_mode.rs  declares.rs  device_orientation_change_lisener.rs  device_orientation_event_listener.rs  image_reader.rs  image_reader_on_image_available_listener.rs  imports.rs  lib.rs  media_recorder.rs  media_recorder_on_error_listener.rs  media_recorder_on_info_listener.rs  pimpl.rs  preview_display.rs  scoped_camera_device.rs  scoped_camera_device_declares.rs  still_picture_taker.rs  still_picture_taker_state.rs  stream_configuration_map.rs  texture_view_surface_texture_listener.rs  viewer_component.rs
aloe-android-notifications/: Cargo.toml  README.md
aloe-android-notifications/src/: android_notification.rs  android_pushnotifications.rs  android_pushnotifications_impl.rs  android_pushnotifications_pimpl.rs  demo_aux_actions_view.rs  demo_param_controls.rs  demo_params_view.rs  demo_remote_view.rs  demo_row_component.rs  demo_tabbed_component.rs  examples_utilities_pushnotificationsdemo.rs  firebase_instance_id.rs  firebase_instance_id_service.rs  firebase_messaging.rs  firebase_messaging_service.rs  imports.rs  lib.rs  notification_action_builder.rs  notification_builder_api16.rs  notification_builder_api17.rs  notification_builder_api20.rs  notification_builder_api21.rs  notification_builder_api24.rs  notification_builder_api26.rs  notification_builder_base.rs  notification_channel.rs  notification_channel_group.rs  notification_manager_api23.rs  notification_manager_api24.rs  notification_manager_api26.rs  notification_manager_base.rs  push_notification_action_progress.rs  push_notification_badge_icon_type.rs  push_notification_group_alert_behavior.rs  push_notification_led_blink_pattern.rs  push_notification_listener.rs  push_notification_lock_screen_appearance.rs  push_notification_priority.rs  push_notification_timestamp_visibility.rs  push_notification_type.rs  (+6 more)
aloe-android-video/: Cargo.toml  README.md
aloe-android-video/src/: imports.rs  lib.rs  media_controller.rs  media_controller_callback.rs  media_player_listener.rs  media_session.rs  media_session_bytecode.rs  media_session_callback.rs  media_session_controller.rs  media_session_player.rs  media_session_player_state.rs  on_audio_focus_change.rs  playback.rs  playback_state.rs  system_volume_listener.rs  video_component_impl.rs
aloe-android/src/: activity_launcher.rs  activity_lifecycle_callbacks.rs  aloe_activity_watcher.rs  aloe_app_lifecycle.rs  aloe_http_stream.rs  aloe_start.rs  aloe_web_chrome_client.rs  aloe_web_view_21_bytecode.rs  aloe_web_view_client16.rs  android_accessibility.rs  android_component_peer.rs  android_component_peer_preallocated_image.rs  android_component_peer_startup_activity_callback_listener.rs  android_component_peer_view_window_insets_listener.rs  android_content_sharer_file_observer.rs  android_content_uri_output_stream.rs  android_content_uri_resolver.rs  android_contentsharer.rs  android_contentsharer_cursor.rs  android_contentsharer_native_impl.rs  android_contentsharer_prepare_files_thread.rs  android_files.rs  android_font.rs  android_fonts.rs  android_ft_typeface_list.rs  android_graphicscontext.rs  android_handler.rs  android_iconhelpers.rs  android_interface_implementer.rs  android_jnihelpers.rs  android_message_queue.rs  android_network.rs  android_process.rs  android_runnable.rs  android_text_layout.rs  (+43 more)
aloe-animation/: Cargo.toml  README.md
aloe-app/: Cargo.toml  README.md
aloe-array/: Cargo.toml  README.md
aloe-au/: Cargo.toml  LICENSE  README.md
aloe-au-base/: Cargo.toml  README.md
aloe-au-buffer/: Cargo.toml  README.md
aloe-au-carbon/: Cargo.toml  README.md
aloe-au-channel/: Cargo.toml  README.md
aloe-au-component/: Cargo.toml  README.md
aloe-au-coreaudio/: Cargo.toml  README.md
aloe-au-device/: Cargo.toml  README.md
aloe-au-imports/: Cargo.toml  README.md
aloe-au-midi/: Cargo.toml  README.md
aloe-au-parameter/: Cargo.toml  README.md
aloe-au-streams/: Cargo.toml  README.md
aloe-audio-app-component/: Cargo.toml  README.md
aloe-audio-block/: Cargo.toml  README.md
aloe-audio-device-manager/: Cargo.toml  README.md
aloe-audio-devices/: Cargo.toml  README.md
aloe-audio-interface/: Cargo.toml  README.md
aloe-audio-linux-bela/: Cargo.toml  README.md
aloe-audio-linux-jack/: Cargo.toml  README.md
(+4294 files in other folders)
