[dependencies]
atomic = "*"
bitfield = "*"
lazy_static = "*"
libc = "*"
modular-bitfield = "*"
num = "*"
parking_lot = "*"
static_assertions = "*"
wchar = "*"
[dependencies.aloe-buffers]
path = "../aloe-buffers"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-test]
path = "../aloe-test"
[package]
edition = "2021"
name = "aloe-adsr"
version = "0.1.0"