[dependencies.aloe-buttons]
path = "../aloe-buttons"
[dependencies.aloe-combobox]
path = "../aloe-combobox"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-dialogwindow]
path = "../aloe-dialogwindow"
[dependencies.aloe-drag-and-drop]
path = "../aloe-drag-and-drop"
[dependencies.aloe-font]
path = "../aloe-font"
[dependencies.aloe-geometry]
path = "../aloe-geometry"
[dependencies.aloe-graphics]
path = "../aloe-graphics"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-keyboard]
path = "../aloe-keyboard"
[dependencies.aloe-label]
path = "../aloe-label"
[dependencies.aloe-mouse]
path = "../aloe-mouse"
[dependencies.aloe-progressbar]
path = "../aloe-progressbar"
[dependencies.aloe-texteditor]
path = "../aloe-texteditor"
[dependencies.aloe-windowing]
path = "../aloe-windowing"
[package]
edition = "2021"
name = "aloe-alert-window"
version = "0.1.0"