[dependencies]
atomic = "*"
bitfield = "*"
lazy_static = "*"
libc = "*"
modular-bitfield = "*"
num = "*"
parking_lot = "*"
static_assertions = "*"
wchar = "*"
[dependencies.aloe-buttons]
path = "../aloe-buttons"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-critical-section]
path = "../aloe-critical-section"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-events]
path = "../aloe-events"
[dependencies.aloe-files]
path = "../aloe-files"
[dependencies.aloe-graphics]
path = "../aloe-graphics"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-network]
path = "../aloe-network"
[dependencies.aloe-threads]
path = "../aloe-threads"
[package]
edition = "2021"
name = "aloe-analytics"
version = "0.1.0"