[dependencies]
jni-sys = "*"
libc = "*"
[dependencies.aloe-android]
path = "../aloe-android"
[dependencies.aloe-audio-device-manager]
path = "../aloe-audio-device-manager"
[dependencies.aloe-audio-interface]
path = "../aloe-audio-interface"
[dependencies.aloe-bigint]
path = "../aloe-bigint"
[dependencies.aloe-buffers]
path = "../aloe-buffers"
[dependencies.aloe-critical-section]
path = "../aloe-critical-section"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-threads]
path = "../aloe-threads"
[package]
edition = "2021"
name = "aloe-android-audio"
version = "0.1.0"
