[dependencies.aloe-android]
path = "../aloe-android"
[dependencies.aloe-camera]
path = "../aloe-camera"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-container]
path = "../aloe-container"
[dependencies.aloe-critical-section]
path = "../aloe-critical-section"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-desktop]
path = "../aloe-desktop"
[dependencies.aloe-events]
path = "../aloe-events"
[dependencies.aloe-files]
path = "../aloe-files"
[dependencies.aloe-geometry]
path = "../aloe-geometry"
[dependencies.aloe-image]
path = "../aloe-image"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-string]
path = "../aloe-string"
[dependencies.aloe-threads]
path = "../aloe-threads"
[dependencies.aloe-time]
path = "../aloe-time"
[package]
edition = "2021"
name = "aloe-android-camera"
version = "0.1.0"