[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-container]
path = "../aloe-container"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-events]
path = "../aloe-events"
[dependencies.aloe-geometry]
path = "../aloe-geometry"
[dependencies.aloe-graphics]
path = "../aloe-graphics"
[dependencies.aloe-image]
path = "../aloe-image"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-time]
path = "../aloe-time"
[package]
edition = "2021"
name = "aloe-animation"
version = "0.1.0"