[dependencies]
atomic = "*"
bitfield = "*"
lazy_static = "*"
libc = "*"
modular-bitfield = "*"
num = "*"
parking_lot = "*"
static_assertions = "*"
wchar = "*"
[dependencies.aloe-android]
path = "../aloe-android"
[dependencies.aloe-buttons]
path = "../aloe-buttons"
[dependencies.aloe-colour]
path = "../aloe-colour"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-critical-section]
path = "../aloe-critical-section"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-drawables]
path = "../aloe-drawables"
[dependencies.aloe-events]
path = "../aloe-events"
[dependencies.aloe-geometry]
path = "../aloe-geometry"
[dependencies.aloe-graphics]
path = "../aloe-graphics"
[dependencies.aloe-image]
path = "../aloe-image"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-menus]
path = "../aloe-menus"
[dependencies.aloe-mouse]
path = "../aloe-mouse"
[dependencies.aloe-string]
path = "../aloe-string"
[dependencies.aloe-time]
path = "../aloe-time"
[dependencies.aloe-windowing]
path = "../aloe-windowing"
[package]
edition = "2021"
name = "aloe-app"
version = "0.1.0"