[dependencies.aloe-critical-section]
path = "../aloe-critical-section"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-parameter-type]
path = "../aloe-parameter-type"
[package]
edition = "2021"
name = "aloe-array"
version = "0.1.0"