[dependencies]
core-foundation = "*"
coreaudio-sys = "*"
[dependencies.aloe-au-buffer]
path = "../aloe-au-buffer"
[dependencies.aloe-au-component]
path = "../aloe-au-component"
[dependencies.aloe-au-imports]
path = "../aloe-au-imports"
[dependencies.aloe-au-parameter]
path = "../aloe-au-parameter"
[dependencies.aloe-au-streams]
path = "../aloe-au-streams"
[dependencies.aloe-au-time]
path = "../aloe-au-time"
[dependencies.aloe-au-types]
path = "../aloe-au-types"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[package]
edition = "2021"
name = "aloe-au-base"
version = "0.1.0"