[dependencies]
core-foundation = "*"
coreaudio-sys = "*"
[dependencies.aloe-au-component]
path = "../aloe-au-component"
[dependencies.aloe-au-imports]
path = "../aloe-au-imports"
[dependencies.aloe-au-parameter]
path = "../aloe-au-parameter"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[package]
edition = "2021"
name = "aloe-au-carbon"
version = "0.1.0"
