[dependencies]
core-foundation = "*"
coreaudio-sys = "*"
[dependencies.aloe-au-imports]
path = "../aloe-au-imports"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-files]
path = "../aloe-files"
[dependencies.aloe-deps]
path = "../aloe-deps"
[package]
edition = "2021"
name = "aloe-au-component"
version = "0.1.0"
