[dependencies]
core-foundation = "*"
coreaudio-sys = "*"
[dependencies.aloe-au-imports]
path = "../aloe-au-imports"
[dependencies.aloe-audio-device-manager]
path = "../aloe-audio-device-manager"
[dependencies.aloe-audio-devices]
path = "../aloe-audio-devices"
[dependencies.aloe-audio-interface]
path = "../aloe-audio-interface"
[dependencies.aloe-bigint]
path = "../aloe-bigint"
[dependencies.aloe-buffers]
path = "../aloe-buffers"
[dependencies.aloe-codec]
path = "../aloe-codec"
[dependencies.aloe-container]
path = "../aloe-container"
[dependencies.aloe-critical-section]
path = "../aloe-critical-section"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-events]
path = "../aloe-events"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-midi]
path = "../aloe-midi"
[dependencies.aloe-network]
path = "../aloe-network"
[dependencies.aloe-streams]
path = "../aloe-streams"
[dependencies.aloe-string]
path = "../aloe-string"
[dependencies.aloe-threads]
path = "../aloe-threads"
[package]
edition = "2021"
name = "aloe-au-coreaudio"
version = "0.1.0"