[dependencies]
core-foundation = "*"
coreaudio-sys = "*"
[dependencies.aloe-au-base]
path = "../aloe-au-base"
[dependencies.aloe-au-component]
path = "../aloe-au-component"
[dependencies.aloe-au-imports]
path = "../aloe-au-imports"
[dependencies.aloe-au-midi]
path = "../aloe-au-midi"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[package]
edition = "2021"
name = "aloe-au-device"
version = "0.1.0"