[dependencies]
coreaudio-sys = "*"
coreaudio-rs = { version = "*", features = ["audio_unit"] }
libc = "*"
core-foundation-sys = "*"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[package]
edition = "2021"
name = "aloe-au-imports"
version = "0.1.0"
