[dependencies.aloe-au-base]
path = "../aloe-au-base"
[dependencies.aloe-au-component]
path = "../aloe-au-component"
[dependencies.aloe-au-imports]
path = "../aloe-au-imports"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-windowing]
path = "../aloe-windowing"
[package]
edition = "2021"
name = "aloe-au-midi"
version = "0.1.0"