[dependencies.aloe-audio-device-manager]
path = "../aloe-audio-device-manager"
[dependencies.aloe-audio-interface]
path = "../aloe-audio-interface"
[dependencies.aloe-audio-source-player]
path = "../aloe-audio-source-player"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-xml]
path = "../aloe-xml"
[package]
edition = "2021"
name = "aloe-audio-app-component"
version = "0.1.0"