[dependencies]
num = "*"

[dependencies.aloe-buffers]
path = "../aloe-buffers"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-memory]
path = "../aloe-memory"
[dependencies.aloe-sample-type]
path = "../aloe-sample-type"
[dependencies.aloe-smoothed-value]
path = "../aloe-smoothed-value"
[package]
edition = "2021"
name = "aloe-audio-block"
version = "0.1.0"
