[dependencies.aloe-audio-device-manager]
path = "../aloe-audio-device-manager"
[dependencies.aloe-audio-interface]
path = "../aloe-audio-interface"
[dependencies.aloe-bigint]
path = "../aloe-bigint"
[dependencies.aloe-buttons]
path = "../aloe-buttons"
[dependencies.aloe-combobox]
path = "../aloe-combobox"
[dependencies.aloe-component]
path = "../aloe-component"
[dependencies.aloe-derive]
path = "../aloe-derive"
[dependencies.aloe-events]
path = "../aloe-events"
[dependencies.aloe-graphics]
path = "../aloe-graphics"
[dependencies.aloe-deps]
path = "../aloe-deps"
[dependencies.aloe-label]
path = "../aloe-label"
[dependencies.aloe-listbox]
path = "../aloe-listbox"
[dependencies.aloe-midi]
path = "../aloe-midi"
[package]
edition = "2021"
name = "aloe-audio-devices"
version = "0.1.0"